# python-rt11

./: .gitignore  LICENSE  MANIFEST.in  Makefile  README.md  pyproject.toml  requirements-dev.txt  rt11.py  setup.cfg  xferx.py  xferx.spec
.github/workflows/: build-windows.yml  release.yml  test.yml
macro11/: .gitignore  HALT.MAC  HALT.SAV  README.md  STARTA.COM  macro.ini  macro11.sh  pdp11.ini  telnet.ini
rt11/: abstract.py  block.py  caps11fs.py  commons.py  dmsfs.py  dos11fs.py  dos11magtapefs.py  files11fs.py  native.py  os8fs.py  prodosfs.py  rad50.py  rstsfs.py  rt11fs.py  rx.py  shell.py  solofs.py  tape.py  uic.py  unix0fs.py  unixfs.py  volumes.py
rt11/apple2/: appledosfs.py  commons.py  disk.py  pascalfs.py  prodosfs.py
rt11/nova/: dgdosdumpfs.py  dgdosfs.py  dgdosmagtapefs.py  rdosfs.py
rt11/pdp11/: caps11fs.py  dos11fs.py  dos11magtapefs.py  files11fs.py  rstsfs.py  rt11fs.py  solofs.py
rt11/pdp7/: block.py  codes.py  decsysfs.py  unix0fs.py
rt11/pdp8/: dmsfs.py  os8fs.py
tests/: test_appledos.py  test_caps11.py  test_cmd.py  test_decsys.py  test_dms.py  test_dos11.py  test_dos11dectape.py  test_dos11magtest.py  test_files11.py  test_misc.py  test_native.py  test_nova_dgdos.py  test_nova_dgdosmagtape.py  test_nova_rdos.py  test_os8.py  test_pascal.py  test_prodos.py  test_rsts.py  test_rt11.py  test_solo.py  test_tss8.py  test_unixv0.py  test_unixv6.py
tests/dsk/: Makefile  appledos.com  appledos.dsk  caps11.t60  ciao.apple2  (+22 more)
xferx/: abstract.py  cache.py  commons.py  native.py  rx.py  shell.py  tape.py  uic.py  unixfs.py  volumes.py
(+94 files in other folders)
