[metadata]
name = xferx
version = file: xferx/VERSION
author = Andrea Bonomi
author_email = andrea.bonomi@gmail.com
description = XFERX is an utility for transferring files between various file systems.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/andreax79/xferx
license = MIT
license_files = LICENSE
platforms = any
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
project_urls =
    Bug Tracker = http://github.com/andreax79/xferx/issues
    Source Code = http://github.com/andreax79/xferx

[options]
packages = find:
include_package_data = true
python_requires = >=3.7

[options.entry_points]
console_scripts =
    xferx = xferx.shell:main

[options.extras_require]
dev =
    pytest

[flake8]
max-line-length = 120
extend-ignore =
    E203
    E401
    W504
    E221
